[project]
name = "sheetsense"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.9",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.7.0",
    "pydantic-ai>=1.1.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.57.0",
    "tabulate>=0.10.0",
]
